--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="dashboard" class="space-y-8">
             <header class="flex flex-col md:flex-row md:items-start justify-between gap-4">
                 <div>
-                    <h2 class="text-3xl font-bold mb-2">Ultimate Funding Intelligence</h2>
+                    <h2 class="text-3xl font-bold mb-2">Smart Play Network: Live Funding</h2>
                     <p class="text-slate-500">Advanced tracker with intelligent filtering for Scottish organisations</p>
                 </div>
                 <div class="flex gap-2">
